--- a/sdi-project4.html
+++ b/sdi-project4.html
@@ -16,6 +16,6 @@
 <footer>
     <p>COMPLETION DATE, FULL NAME</p>
 </footer>
-<script type="text/javascript" src="rename-me.js"></script>
+<script type="text/javascript" src="kittrell-vincent-assignment4.js"></script>
 </body>
 </html>
