Added first array problem.

--- a/sdi-project4.html
+++ b/sdi-project4.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FULL NAME :: Project 4 :: SDI TERMNUMBER</title>
+    <title>Vincent Kittrell :: Project 4 :: SDI 1405</title>
     <link rel="stylesheet" href="sdi.css" type="text/css" />
     <meta charset="UTF-8" />
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>SDI 1405: Vincent Kittrell</h1>
     <h2>Project 4</h2>
 </header>
 <article>
-<p>You don't need to put anything here for this project.  Though you can if you want to!</p>
+<p>Good bye and thanks for all of the fish!</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>May 29,2014, Vincent Kittrell</p>
 </footer>
 <script type="text/javascript" src="kittrell-vincent-assignment4.js"></script>
 </body>
